questions menu ready

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>FBB Algorithms</title>
+    <style>
+      body {
+        background-color: #e2e2e2 !important;
+      }
+    </style>
   </head>
   <body>
     <div id="auth">
