--- a/templates/editor.html
+++ b/templates/editor.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Admin Page</title>
+    <style>
+      body {
+        background-color: #e2e2e2 !important;
+      }
+    </style>
   </head>
   <body>
     <div id="admin">
